first draft of research page

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                 around 5-60 times in the entire genome.
             </blockquote>
 
-            <p>VNTR’s are inherited from one generation to the next</p>
+            <p>VNTR’s are inherited from one generation to the next.</p>
 
             <h3 class="text-wheat bold">Example of Lab Identification</h3>
 
@@ -68,15 +68,12 @@
             <div class="text-center">
                 <img src="./img/vntr.gif" alt="" class="img-fluid">
             </div>
-            <p>Because VNTR patterns are inherited genetically, a given person's VNTR pattern is more or less unique.
-                The more VNTR probes used to analyze a person's VNTR pattern, the more distinctive and individualized
-                that pattern, or DNA fingerprint, will be.</p>
 
             <h3 class="text-wheat bold">Use in Crime Scenes</h3>
             <p>Almost every single cell in a multicellular organism contains the full set of DNA required for that
                 organism (its complete genome)
                 This is why when blood is left behind at a crime scene, we are able to use the blood to get the entire
-                DNA.
+                DNA. This DNA can later be used to perform DNA fingerprinting to determine the identity of the person.
             </p>
 
             <h3 class="text-light-green bold">Process of DNA Fingerprinting in Real Life</h3>
