--- a/data.html
+++ b/data.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/texts.css">
     <link rel="stylesheet" href="./css/survey.css">
+    <link rel="stylesheet" href="./css/data.css">
     <title>Document</title>
 </head>
 
@@ -19,6 +20,7 @@
     <section class="mt-4">
         <div class="container">
             <h1 class="text-center">Public Opinion on <span class="text-light-green">DNA Fingerprinting</span></h1>
+            <p class="lead text-center">All data is updated in real time from the survey on the previous page!</p>
 
             <!-- row 1 -->
             <div class="row">
@@ -88,6 +90,14 @@
         </div>
 
 
+    </section>
+
+    <section class="navbar">
+        <div class="container text-center">
+            <p class="lead text-center mx-auto">
+                <a href="./home.html">Keep going on our journey...</a>
+            </p>
+        </div>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.js"></script>
