--- a/survey.html
+++ b/survey.html
@@ -196,7 +196,7 @@
                 </div>
             </form>
 
-            <div class="hidden" id="thanks">
+            <div class="hidden text-center" id="thanks">
 
                 <h1>Thank you for your response!</h1>
 
