not added last time

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/texts.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <title>DNA Fingerprinting</title>
 </head>
 
@@ -18,12 +19,14 @@
             <h1 id="welcome-text" class="display-4">
             </h1>
 
-            <a href="./about.html">
-                <div class="arrow mx-auto mt-5">
-                    <div class="arrow-top"></div>
-                    <div class="arrow-bottom"></div>
-                </div>
-            </a>
+            <section id="navigation">
+                <a href="./about.html">
+                    <div class="arrow mx-auto mt-5">
+                        <div class="arrow-top"></div>
+                        <div class="arrow-bottom"></div>
+                    </div>
+                </a>
+            </section>
 
 
 
