--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/texts.css">
     <link rel="stylesheet" href="./css/about.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <title>What is DNA Fingerprinting?</title>
 </head>
 
