--- a/data.html
+++ b/data.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/texts.css">
     <link rel="stylesheet" href="./css/survey.css">
     <link rel="stylesheet" href="./css/data.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <title>Document</title>
 </head>
 
