--- a/ethics.html
+++ b/ethics.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/texts.css">
-    <link rel="stylesheet" href="./css/research.css.css">
+    <link rel="stylesheet" href="./css/ethics.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <title>Research Results</title>
 </head>
 
