--- a/research.html
+++ b/research.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/texts.css">
     <link rel="stylesheet" href="./css/research.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <title>Research Results</title>
 </head>
 
