--- a/survey.html
+++ b/survey.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/texts.css">
     <link rel="stylesheet" href="./css/survey.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <title>DNA Fingerprinting Survey</title>
 </head>
 
@@ -201,13 +202,13 @@
                 <h1>Thank you for your response!</h1>
 
                 <!-- TODO: uncomment before turning in -->
-                <!-- <section class="navbar">
+                <section class="navbar">
                     <div class="container text-center">
                         <p class="lead text-center mx-auto">
                             <a href="./data.html">Keep going on our journey...</a>
                         </p>
                     </div>
-                </section> -->
+                </section>
 
             </div>
 
