--- a/about.html
+++ b/about.html
@@ -106,12 +106,22 @@
     <section class="navbar">
         <div class="container text-center">
             <p class="lead text-center mx-auto">
-                <a href="./research.html">Keep going on our journey...</a>
+                <a href="./research.html">Learn about Sentiment Analysis Research</a>
             </p>
         </div>
     </section>
 
-    <div class="separator"></div>
+    <footer>
+        <hr>
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <p class="text-muted">&copy; 2021 <a href="https://ganning127.github.io/" target="_blank"
+                        class="no-color">Ganning Xu</a>
+                </p>
+            </div>
+        </div>
+    </footer>
+
 
 
 
