--- a/data.html
+++ b/data.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/survey.css">
     <link rel="stylesheet" href="./css/data.css">
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-    <title>Document</title>
+    <title>Live Response Data</title>
 </head>
 
 <body>
@@ -96,10 +96,21 @@
     <section class="navbar">
         <div class="container text-center">
             <p class="lead text-center mx-auto">
-                <a href="./home.html">Keep going on our journey...</a>
+                <a href="./home.html">Bring it home!</a>
             </p>
         </div>
     </section>
+
+    <footer>
+        <hr>
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <p class="text-muted">&copy; 2021 <a href="https://ganning127.github.io/" target="_blank"
+                        class="no-color">Ganning Xu</a>
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.7/js/tether.min.js"></script>
