--- a/research.html
+++ b/research.html
@@ -304,10 +304,21 @@
     <section class="navbar">
         <div class="container text-center">
             <p class="lead text-center mx-auto">
-                <a href="./ethics.html">Keep going on our journey...</a>
+                <span class="bold">Next Up</span>: <a href="./ethics.html">Ethics of DNA Fingerprinting...</a>
             </p>
         </div>
     </section>
+
+    <footer>
+        <hr>
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <p class="text-muted">&copy; 2021 <a href="https://ganning127.github.io/" target="_blank"
+                        class="no-color">Ganning Xu</a>
+                </p>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.js"></script>
