--- a/survey.html
+++ b/survey.html
@@ -205,7 +205,7 @@
                 <section class="navbar">
                     <div class="container text-center">
                         <p class="lead text-center mx-auto">
-                            <a href="./data.html">Keep going on our journey...</a>
+                            <a href="./data.html">Look at other people's Responses</a>
                         </p>
                     </div>
                 </section>
